unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/Credit_Review_Monthly_Ledger__c.object-meta.xml
<CustomObject>
    <label>Credit Review Monthly Ledger</label>
    <nameField>
        <displayFormat>CRML-{0}</displayFormat>
        <label>Monthly Ledger ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Review Monthly Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>