unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Avg_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Balance__c</fullName>
    <label>Average Daily Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>