unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Bank_Monthly_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Bank_Monthly_Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Monthly Ledger</label>
    <referenceTo>Bank_Monthly_Ledgers__c</referenceTo>
    <relationshipLabel>Credit Review Monthly Ledgers</relationshipLabel>
    <relationshipName>Credit_Review_Monthly_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>