unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Bank_Summary__c.field-meta.xml
<CustomField>
    <fullName>Bank_Summary__c</fullName>
    <label>Bank Summary</label>
    <referenceTo>Credit_Review_Bank_Summary__c</referenceTo>
    <relationshipLabel>Monthly Ledgers</relationshipLabel>
    <relationshipName>Credit_Review_Monthly_Ledgers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>