unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance__c</fullName>
    <label>Beginning Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>