unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month__c</fullName>
    <label>Calendar Month Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>