unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Day_1_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Daily_Balance__c</fullName>
    <label>Day 1 Daily Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>