unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Deposits_Under_10K__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Under_10K__c</fullName>
    <label>Deposits Under 10K</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>