unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance__c</fullName>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>