unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Include_in_Averages__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Averages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Averages</label>
    <type>Checkbox</type>
</CustomField>