unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <label>Month Name</label>
    <type>TextArea</type>
</CustomField>