unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/NSF__c.field-meta.xml
<CustomField>
    <fullName>NSF__c</fullName>
    <label>NSF's</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>