unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Other_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Other_Deposits__c</fullName>
    <label>Other Deposits ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>