unpackaged/main/default/objects/Credit_Review_Monthly_Ledger__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Date</type>
</CustomField>